fixed about heading align problem

--- a/src/App.css
+++ b/src/App.css
@@ -297,15 +297,24 @@ h3 {
 
 /* about */
 
+.about-heading>h1 {
+    line-height: 0;
+    text-align: center;
+}
+
 .about-heading::after {
     content: "";
     display: block;
     position: relative;
-    top: 20px;
+    top: 15px;
     width: 300px;
     height: 1px;
     margin-left: 20px;
     background-color: var(--lightest-navy);
+}
+
+.aboutme {
+    transform: translateY(5px);
 }
 
 @media screen and (max-width: 1080px) {
